--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -55,8 +55,8 @@
 		"@types/node-fetch": "^2.5.12",
 		"discord-api-types": "^0.26.1",
 		"form-data": "^4.0.0",
-		"node-fetch": "^2.6.7",
-		"tslib": "^2.3.1"
+		"tslib": "^2.3.1",
+		"undici": "^4.12.2"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.17.0",
