--- a/package.json
+++ b/package.json
@@ -52,5 +52,8 @@
 	"workspaces": [
 		"packages/*"
 	],
-	"packageManager": "yarn@3.1.1"
+	"packageManager": "yarn@3.1.1",
+	"resolutions": {
+		"undici": "portal:/Users/suneettipirneni/undici"
+	}
 }
